<resources>
    <string name="app_name">Sesion03</string>
<!--launcher-->
    <string name="l_by">by</string>
    <string name="l_name">Imanac</string>
<!--Menu-->
    <string name="txt_reg">Registrate</string>
    <string name="txt_sp">Spinner</string>
    <string name="txt_grid">GridView</string>
<!--Int_Registrate-->
    <string name="txt_nomb">Nombres</string>
    <string name="txt_ape">Apellidos</string>
    <string name="txt_ema">Correo</string>
    <string name="hint_nombre">Ingresar su nombre</string>
    <string name="hint_ape">Ingresar sus apellidos</string>
    <string name="txt_tit">Ejemplo de Formulario</string>
    <string name="hint_correo">Ingresar Correo Eletronico</string>
    <string name="txt_bt">Mostrar</string>
<!--spinner-->
    <string name="txt_spin">Elija una opción</string>
</resources>
