<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <Button
        android:id="@+id/btton_registrar"
        android:layout_width="294dp"
        android:layout_height="54dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="76dp"
        android:onClick="irRegistrar"
        android:text="@string/txt_reg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btton_spinner"
        android:layout_width="296dp"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:onClick="irSpinner"
        android:text="@string/txt_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btton_registrar" />

    <Button
        android:id="@+id/btton_gridview"
        android:layout_width="296dp"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:onClick="irGrid"
        android:text="@string/txt_grid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btton_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>